--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,26 @@
-# Site settings
-title: "Theodore's School Page"
-description: "A space for student leadership, learning, and reflection"
-author: "Theodore Aplasca"
-email: theodoreaplascaict@example.com
-url: "https://theodoreaplascaict.github.io"
-baseurl: "" # Leave blank if deploying to root
+<html>
+<title>HandsOn1</title>
+<h1 style="text-align: center;">Grade 11 - PRODUCTION</h1>
+<hr>
+<h2><center><a href="exer3.htm">GALLERY</a href>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<b>HOME</b>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="exer2.htm">CALENDAR</a href></h2></center>
+<hr>
+<font face="chiller" size="5" color="Green"></font>
 
-# Theme
-theme: minima
+<img src="SASHS LOGO.png" width="30%">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="SASHS SCHOOL.png" width="30%">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<img src="TAGUIG LOGO.png" width="30%">
+<br>
+<br>
+<br>
+<br>
+<br>
+<h4>Description:</h4><p>The Stand Alone Senior High School (SHS) within Taguig Integrated School (TIS) is a vibrant public educational institution located in Sta. Ana, Taguig City, Metro Manila. It caters exclusively to Grade 11 and Grade 12 students, offering a focused and enriching environment tailored to the unique needs of senior high learners.
+</p>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-# Build settings
-markdown: kramdown
-highlighter: rouge
-
-# Plugins
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
+<hr> 
+<h3 style="text-align: center;">Theodore Clement Aplasca</h3>
+<h4 style="text-align: center;">11-ICT-PRODUCTION</h4>
+</html>
